feat: add update (post) endpoint
